syntax = "proto3";

package postgresql;
option go_package="github.com/upmio/unit-operator/pkg/agent/app/postgresql";

enum LogicalBackupMode {
  Full = 0;
  Database = 1;
  Table = 2;
}

message S3Storage {
  string endpoint = 1;
  string bucket = 2;
  string access_key = 3;
  string secret_key = 4;
}

message LocalStorage {
  string path = 1;
}

message LogicalBackupRequest {
  string backup_file = 1;
  string username = 2;
  string password = 3;
  string database = 4;
  string table = 5;
  LogicalBackupMode logicalBackupMode = 6;
  oneof StorageType {
    S3Storage s3_storage = 7;
    LocalStorage local_storage = 8;
  }
}

message PhysicalBackupRequest {
  string backup_file = 1;
  string username = 2;
  string password = 3;
  oneof StorageType {
    S3Storage s3_storage = 4;
    LocalStorage local_storage = 5;
  }
}

message RestoreRequest {
  string backup_file = 1;
  oneof StorageType {
    S3Storage s3_storage = 2;
    LocalStorage local_storage = 3;
  }
}

message Response {
  string message = 1;
}

service PostgresqlOperation {
  rpc PhysicalBackup (PhysicalBackupRequest) returns (Response);
  rpc LogicalBackup (LogicalBackupRequest) returns (Response);
  rpc Restore (RestoreRequest ) returns (Response);
}